sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:5: error: not enough arguments for method getRayonCrepe: (x$1: Int)Int.
Unspecified value parameter x$1.
      if (getRayonCrepe()) {
                       ^