sort.pancake.BasicPancake.scala.code
def solve() {
  while (!estTriee) {
    for (i<-1 to getTaillePile-2) {
      if (getRayonCrepe()) {
				retourne(i)
      }
    }
  }
}